--- a/List comprehension.ipynb
+++ b/List comprehension.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,43 +20,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-c784451f57cf>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-c784451f57cf>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    if i%2!=0\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l2WithFor=[]\n",
     "for i in l1:\n",
-    "    if i%2!=0\n",
+    "    if i%2!=0:\n",
     "        l2.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27]"
+       "[0,\n",
+       " 3,\n",
+       " 6,\n",
+       " 9,\n",
+       " 12,\n",
+       " 15,\n",
+       " 18,\n",
+       " 21,\n",
+       " 24,\n",
+       " 27,\n",
+       " 1,\n",
+       " 3,\n",
+       " 5,\n",
+       " 7,\n",
+       " 9,\n",
+       " 11,\n",
+       " 13,\n",
+       " 15,\n",
+       " 17,\n",
+       " 19,\n",
+       " 21,\n",
+       " 23,\n",
+       " 25,\n",
+       " 27,\n",
+       " 29]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "l2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in l1 if i%2!=0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 9, 25, 49, 81, 121, 169, 225, 289, 361, 441, 529, 625, 729, 841]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i*i for i in l1 if i%2!=0]"
    ]
   },
   {
